resources/k8syamls/dbPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: default
  labels:
    name: db
    tier: backend  #this pod is NOT exposed to internet.
  annotations:
    name: db
spec:
  containers:
    - name: dbcontainer
      image: postgres:12.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: postgres-port
          containerPort: 5432
          hostPort: 5432
          protocol: TCP
      livenessProbe:
        exec:
          command: ["psql", "-w", "-U", "postgres", "-d", "postgres", "-c", "SELECT 1"]
        initialDelaySeconds: 15
        timeoutSeconds: 2
      volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data/p
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pgdata-claim
  dnsPolicy: ClusterFirst
  restartPolicy: Always
