resources/k8syamls/apiService.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
  labels:
    tier: frontend
  annotations:
    name: api
spec:
  selector:
    name: api
  type: ClusterIP
  ports:
    - port: 80
