resources/k8syamls/dbService.yml
apiVersion: v1
kind: Service
metadata:
  name: dbservice
  namespace: default
  labels:
    tier: backend
  annotations:
    name: dbservice
spec:
  selector:
    name: db
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
