resources/k8syamls/webService.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  labels:
    tier: frontend
  annotations:
    name: web
spec:
  selector:
    name: web
  type: ClusterIP
  ports:
    - port: 80
