resources/k8syamls/traefik_ingresses.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`web.secretid`) && Path(`/`)
    kind: Rule
    services:
    - name: web
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webingresssecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`web.secretid`) && Path(`/`)
    kind: Rule
    services:
    - name: web
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apiingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.secretid`) && Path(`/randomName`)
    kind: Rule
    services:
    - name: api
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apiingresssecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`api.secretid`) && Path(`/randomName`)
    kind: Rule
    services:
    - name: api
      port: 80
